--- a/style.css
+++ b/style.css
@@ -14,7 +14,8 @@ p{
     font-weight: bold;
 }
 span{
-    font-size: 16px;
+    font-family: monospace;
+    font-size: 20px;
     font-style: italic;
 }
 #winOrLose{
