--- a/style.css
+++ b/style.css
@@ -1,158 +1,178 @@
-*{
-	margin: 0;
-	padding: 0;
-    font-family: 'Shadows Into Light', cursive;
-    color: white;
-    text-shadow: -1px -1px 1px #aaa,
-            1px 1px 1px white,
-             0px 4px 1px rgba(0,0,0,0.5),
-             4px 4px 5px rgba(0,0,0,0.7),
-             0px 0px 7px rgba(0,0,0,0.4);
-    }
-p{
-    font-size: 18px;
-    font-weight: bold;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Shadows Into Light", cursive;
+  color: white;
+  text-shadow: -1px -1px 1px #aaa, 1px 1px 1px white,
+    0px 4px 1px rgba(0, 0, 0, 0.5), 4px 4px 5px rgba(0, 0, 0, 0.7),
+    0px 0px 7px rgba(0, 0, 0, 0.4);
 }
-span{
-    font-family: monospace;
-    font-size: 20px;
-    font-style: italic;
-    color: darkslategray;
+p {
+  font-size: 18px;
+  font-weight: bold;
 }
-#winOrLose{
-    font-size: 22px;
-    font-weight: bold;
-    color: orange;
+span {
+  font-family: monospace;
+  font-size: 20px;
+  font-style: italic;
+  color: darkslategray;
+}
+button {
+  cursor: pointer;
+}
+#winOrLose {
+  font-size: 22px;
+  font-weight: bold;
+  color: orange;
 }
 #background {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    min-width: 100%;
-    min-height: 100%;
-    width: auto;
-    height: auto;
-    z-index: -100;
-    -webkit-transform: translateX(-50%) translateY(-50%);
-    transform: translateX(-50%) translateY(-50%);
-    background: url(style.css) no-repeat;
-    background-size: cover;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: -100;
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
+  background: url(style.css) no-repeat;
+  background-size: cover;
 }
-.container{
-    width: auto;
-    float: center;
-    text-align: center;
-    padding-bottom: 1em;
-    }
-.clear{
-    clear: both;
+.container {
+  width: auto;
+  float: center;
+  text-align: center;
+  padding-bottom: 1em;
 }
-.center, h1{
-	text-align: center;	
+.clear {
+  clear: both;
+}
+.center,
+h1 {
+  text-align: center;
 }
 .button {
-    border: 0;
-    height: 225px;
-    width: 225px;
-    display: inline-block;
-    margin: 0px 2px 0px 2px;
-    box-shadow: 0px 3px 8px #43484c;
-    border-radius: 15px 5px 15px 5px;
-    background: gray;  
-    }
-.button:nth-child(even){
-    border-radius: 5px 15px 5px 15px;
+  border: 0;
+  height: 225px;
+  width: 225px;
+  display: inline-block;
+  margin: 0px 2px 0px 2px;
+  box-shadow: 0px 3px 8px #43484c;
+  border-radius: 15px 5px 15px 5px;
+  background: gray;
 }
-#b0:hover{
-    border: solid 1px green;
+.button:nth-child(even) {
+  border-radius: 5px 15px 5px 15px;
 }
-#b0:active{
+#b0:hover {
+  border: solid 1px green;
+}
+#b0:active {
+  background: green;
+  transform: translateY(3px);
+}
+#b1:hover {
+  border: solid 1px red;
+}
+#b1:active {
+  background: red;
+  transform: translateY(3px);
+}
+#b2:hover {
+  border: solid 1px blue;
+}
+#b2:active {
+  background: blue;
+  transform: translateY(3px);
+}
+#b3:hover {
+  border: solid 1px yellow;
+}
+#b3:active {
+  background: yellow;
+  transform: translateY(3px);
+}
+#start {
+  border: 1px solid white;
+  height: auto;
+  width: 125px;
+  font-size: 20px;
+  margin-bottom: 5px;
+  display: inline-block;
+  animation: colorchange 2s infinite;
+  box-shadow: 0px 3px 8px white;
+}
+#start:hover {
+  border: 1px solid orange;
+}
+#start:active {
+  opacity: 0.2;
+  transform: translateY(3px);
+}
+@keyframes colorchange {
+  0% {
+    background: #33cccc;
+  }
+  25% {
+    background: rgb(229, 255, 0);
+  }
+  50% {
+    background: #334fcc;
+  }
+  75% {
+    background: rgb(73, 146, 175);
+  }
+  100% {
+    background: rgb(170, 228, 77);
+  }
+}
+@-webkit-keyframes colorchange /* Safari and Chrome - necessary duplicate */ {
+  0% {
+    background: #33cccc;
+  }
+  25% {
+    background: rgb(229, 255, 0);
+  }
+  50% {
+    background: #334fcc;
+  }
+  75% {
     background: green;
-    transform: translateY(3px);
+  }
+  100% {
+    background: rgb(170, 228, 77);
+  }
 }
-#b1:hover{
-    border: solid 1px red;
+@media screen and (max-width: 950px) {
+  .button {
+    height: 185px;
+    width: 185px;
+    margin: 0.5px 3px 0.5px 3px;
+    text-align: center;
+  }
 }
-#b1:active{
-    background: red;
-    transform: translateY(3px);
+@media screen and (max-width: 789px) {
+  .button {
+    height: 270px;
+    width: 270px;
+    margin: 0.5px 1px 0.5px 1px;
+    text-align: center;
+  }
 }
-#b2:hover{
-    border: solid 1px blue;
-}
-#b2:active{
-    background: blue;
-    transform: translateY(3px);
-}
-#b3:hover{
-    border: solid 1px yellow;
-}
-#b3:active{
-    background: yellow;
-    transform: translateY(3px);
-}
-#start{
-    border: 1px solid white;
-    height: auto;
-    width: 125px;
-    font-size: 20px;
-    margin-bottom: 5px;
-    display: inline-block;
-    animation: colorchange 2s infinite;
-    box-shadow: 0px 3px 8px white;
-}
-#start:hover{
-    border: 1px solid orange;
-}
-#start:active{
-    opacity: 0.2;
-    transform: translateY(3px);
-}
-@keyframes colorchange
-    {
-      0%   {background: #33cccc;}
-      25%  {background: rgb(229, 255, 0);}
-      50%  {background: #334fcc;}
-      75%  {background: rgb(73, 146, 175);}
-      100% {background: rgb(170, 228, 77);}
-    }
-    @-webkit-keyframes colorchange /* Safari and Chrome - necessary duplicate */
-    {
-      0%   {background: #33cccc;}
-      25%  {background: rgb(229, 255, 0);}
-      50%  {background: #334fcc;}
-      75%  {background: green;}
-      100% {background: rgb(170, 228, 77);}
-    }
-    @media screen and (max-width: 950px) {
-    .button {
-        height: 185px;
-        width: 185px;
-        margin: 0.5px 3px 0.5px 3px;
-        text-align: center;
-    }
-}
-    @media screen and (max-width: 789px) {
-    .button {
-        height: 270px;
-        width: 270px;
-        margin: 0.5px 1px 0.5px 1px;
-        text-align: center;
-    }
-}
-    @media screen and (max-width: 550px) {
-    .button {
-        height: 200px;
-        width: 200px;
-        margin: 0.5px 0.5px 0.5px 0.5px;
-        text-align: center;      
-    }   
+@media screen and (max-width: 550px) {
+  .button {
+    height: 200px;
+    width: 200px;
+    margin: 0.5px 0.5px 0.5px 0.5px;
+    text-align: center;
+  }
 }
 @media screen and (max-width: 420px) {
-    .button {
-        height: 155px;
-        width: 155px;
-        margin: 0px;
-        text-align: center;      
-    }   
+  .button {
+    height: 155px;
+    width: 155px;
+    margin: 0px;
+    text-align: center;
+  }
 }
